maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:26: error: ':' expected but ')' found.
def isDirectionFree(dir):Boolean = {
                       ^Escaper:30: error: identifier expected but '}' found.
}
^