maze.lessons.maze.pledge.PledgeMaze.scala.code
override def run() {
  var orientation=0
  
  while (!estSurBiscuit) {
    if (getDirection()==Direction.NORD) {
      while (!estFaceMur) {
        avance()
      }
      droite();orientaion=orientaion+1
    }  
    orientaion=orientaion+keepHandOnSideWall()
    
  }
  prendBiscuit()
}
def keepHandOnSideWall() {
  var tourne=0
  gauche()
  tourne = tourne-1
  while (estFaceMur) {
    droite();tourne = tourne+1
  }
  avance()
}
def isDirectionFree(dir):Boolean = {
  
}